# pacts

./: .env.example  .env.prod  .gitignore  ANTHROPIC-SDK-FIX.md  CACHE-VALIDATION-DAY8.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAY-8-9-COMPLETE-SUMMARY.md  DAY-9-12-ACTION-PLAN.md  DAY-9-RESULTS.md  DOCUMENTATION-INDEX.md  Dockerfile.runner  HITL-MCP-IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION-HANDOFF.md  LICENSE  MCP-DISCOVERY-ANALYSIS.md  MCP-PHASE1-SUCCESS.md  PACTS-5-AGENT-ARCHITECTURE.md  PACTS-5-AGENT-QUICK-REF.md  PACTS-5-AGENT-STARTER.md  PACTS-ALL-PYTHON-ARCHITECTURE.md  PACTS-Build-Blueprint-v3.4.md  PACTS-COMPLETE-SPECIFICATION.md  PACTS-Phase-1-Final-Blueprint-v3.5.md  PACTS_Production-Ready_Autonomous_Context_Testing_System 1.0.pptx  PACTS_Production-Ready_Autonomous_Context_Testing_System.pptx  PROJECT_STATUS.md  QUICKSTART-MCP.md  QUICKSTART.md  README (1).md  README.md  RELEASE-v1.2.md  SESSION-SUMMARY.md  VALIDATE-MCP.md  docker-compose.yml  env.example  gitignore  loop_validation_results.txt  mcp_smoke.py  (+31 more)
.claude/: ccom.js  session_continuity.json  settings.local.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/agents/: dialog_sentinel.py  execution_helpers.py  executor.py  generator.py  oracle_healer.py  planner.py  pom_builder.py  step_tracker.py
backend/api/: main.py  metrics.py
backend/cli/: main.py  runner.py
backend/graph/: build_graph.py  state.py
backend/mcp/: __init__.py  mcp_client.py  playwright_client.py
backend/runtime/: browser_client.py  browser_manager.py  dataset_loader.py  discovery.py  discovery_cached.py  launch_stealth.py  mcp_discovery_adapter.py  patterns.py  policies.py  runtime_profile.py  salesforce_helpers.py  scope_helpers.py  step_utils.py  templating.py
backend/runtime/heuristics/: ux_patterns.py
backend/storage/: __init__.py  base.py  cache.py  database.py  heal_history.py  init.py  pg_hba.conf  postgres_schema.sql  postgresql.conf  runs.py  selector_cache.py
backend/templates/: test_template.j2
backend/tests/integration/: test_role_discovery.py  test_role_discovery_simple.py
backend/tests/unit/: test_discovery_label_placeholder.py  test_discovery_role_name.py  test_executor.py  test_planner.py
backend/utils/: sf_session_manager.py  ulog.py
docker/: docker-compose.yml
docs/: BACKEND-FRONTEND-STRUCTURE.md  BOOTSTRAP-V1-INTEGRATION.md  CRITICAL-FIXES-2025-10-30.md  DAY-13-14-REPORT.md  DAY-15-LIGHTNING-VALIDATION.md  DAY-9-FINAL-RESULTS.md  DEPENDENCY-RESOLUTION-SOLUTION.md  DIALOG-SENTINEL-POC-RESULTS.md  DIALOG-SENTINEL-POC.md  DISCOVERY-V3-INTEGRATED.md  DOCKER-SETUP.md  DOCUMENTATION-CLEANUP-SUMMARY.md  EDR.md  EXECUTOR-AGENT-DELIVERED.md  EXECUTOR-INTELLIGENCE-CORE.md  FEASIBILITY-ANALYSIS.md  FILES-INTEGRATED.md  GENERATOR-AGENT-V2.md  GENERATOR-IN-PHASE1-UPDATE.md  HITL-UX-IMPROVEMENTS.md  INDEX.md  MCP-PHASE-A-IMPLEMENTED.md  MCP-PHASE1-FAILURE-ANALYSIS.md  (+50 more)
(+100 files in other folders)
